update project 2
