# routes/gospeltopics.js
@@ -1,14 +1,12 @@
-const express = require('express');
-const router = express.Router();
+const router = require('express').Router();
 
-const gospeltopicsController = require('../controllers/gospeltopics');
+const getgospeltopic = require('./controllers/gospeltopics');
+const { isAuthenticated } = require('../middleware/authenticate');
 
-router.get('/', gospeltopicsController.getAll);
-
-router.get('/:id', gospeltopicsController.getSingle);
-
-router.post('/',gospeltopicsController.createGospeltopic);
-router.put('/:id', gospeltopicsController.updateGospeltopic);
-router.delete('/:id', gospeltopicsController.deleteGospeltopic);
+router.get('/', getgospeltopicsController.getAllgospeltopics);
+router.get('/:id', getgospeltopicsController.getgospeltopic);
+router.post('/', isAuthenticated, getgospeltopicsController.postgospeltopic);
+router.put('/:id', isAuthenticated, getgospeltopicsController.putgospeltopic);
+router.delete('/:id', isAuthenticated, getgospeltopicsController.deletegospeltopic);
 
 module.exports = router;
